--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.10.1",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "sweetalert2": "^11.26.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
