--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "midtrans-client": "^1.4.3",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "sweetalert2": "^11.26.4"
   },
   "devDependencies": {
     "dotenv": "^17.2.3",
