--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,2 @@
 VITE_GOOGLE_CLIENT_ID ="596620711240-a7irma1e8a9qv448ehivqda19s6e5o9t.apps.googleusercontent.com"
-VITE_TMDB_BASE_URL =
-VITE_TMDB_KEY = 
+VITE_MIDTRANS_CLIENT_KEY ="Mid-client-1Gb6wq5AKizFoeNX" 
