--- a/server/.env.example
+++ b/server/.env.example
@@ -9,3 +9,4 @@ MIDTRANS_CLIENT_KEY=#your_midtrans_client_key_here
 CLOUD_NAME = #your_cloud_name_here
 CLOUD_API_KEY = #your_cloud_api_key_here
 CLOUD_API_SECRET = #your_cloud_api_secret_here
+DATABASE_URL = #your_database_url_here
